<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/mapaInicioFragment">

    <fragment
        android:id="@+id/perfilFragment"
        android:name="com.example.Inmobiliaria_Pamela.ui.perfil.PerfilFragment"
        android:label="@string/datosDeUsuario"
        tools:layout="@layout/perfil_fragment" />
    <fragment
        android:id="@+id/inmueblesFragment"
        android:name="com.example.Inmobiliaria_Pamela.ui.inmuebles.InmueblesFragment"
        android:label="@string/listaDeInmuebles"
        tools:layout="@layout/inquilinos_fragment" >
        <action
            android:id="@+id/action_inmueblesFragment_to_inmuebleFragment"
            app:destination="@id/inmuebleFragment" />
    </fragment>
    <fragment
        android:id="@+id/inquilinosFragment"
        android:name="com.example.Inmobiliaria_Pamela.ui.inquilinos.InquilinosFragment"
        android:label="@string/listaDeInquilinos"
        tools:layout="@layout/inmuebles_fragment" >
        <action
            android:id="@+id/action_inquilinosFragment_to_inquilinoFragment"
            app:destination="@id/inquilinoFragment" />
    </fragment>
    <fragment
        android:id="@+id/contratosFragment"
        android:name="com.example.Inmobiliaria_Pamela.ui.contratos.ContratosFragment"
        android:label="@string/listaDeContratos"
        tools:layout="@layout/contratos_fragment" >
        <action
            android:id="@+id/action_contratosFragment_to_contratoFragment"
            app:destination="@id/contratoFragment" />
    </fragment>
    <fragment
        android:id="@+id/pagosFragment"
        android:name="com.example.Inmobiliaria_Pamela.ui.contratos.PagosFragment"
        android:label="@string/pagosDeContrato"
        tools:layout="@layout/pagos_fragment" >
        <action
            android:id="@+id/action_pagosFragment_to_contratosFragment"
            app:destination="@id/contratosFragment" />
    </fragment>
    <fragment
        android:id="@+id/inmuebleFragment"
        android:name="com.example.Inmobiliaria_Pamela.ui.inmuebles.InmuebleFragment"
        android:label="@string/datosDeInmueble"
        tools:layout="@layout/inmueble_fragment" >
        <action
            android:id="@+id/action_inmuebleFragment_to_inmueblesFragment"
            app:destination="@id/inmueblesFragment" />
    </fragment>
    <fragment
        android:id="@+id/contratoFragment"
        android:name="com.example.Inmobiliaria_Pamela.ui.contratos.ContratoFragment"
        android:label="@string/datosDelContrato"
        tools:layout="@layout/contrato_fragment" >
        <action
            android:id="@+id/action_contratoFragment_to_pagosFragment"
            app:destination="@id/pagosFragment" />
    </fragment>
    <fragment
        android:id="@+id/inquilinoFragment"
        android:name="com.example.Inmobiliaria_Pamela.ui.inquilinos.InquilinoFragment"
        android:label="@string/datosDelInquilino"
        tools:layout="@layout/inquilino_fragment" >
        <action
            android:id="@+id/action_inquilinoFragment_to_inquilinosFragment"
            app:destination="@id/inquilinosFragment" />
    </fragment>
    <fragment
        android:id="@+id/mapaInicioFragment"
        android:name="com.example.Inmobiliaria_Pamela.ui.mapaInicio.MapaInicio"
        android:label="Nuestra Ubicacion"
        tools:layout="@layout/mapa_inicio_fragment" />

    <fragment
        android:id="@+id/logoutFragment"
        android:name="com.example.Inmobiliaria_Pamela.ui.logout.LogoutFragment"
        android:label="@string/Logout"
        tools:layout="@layout/logout_fragment" />

</navigation>